# invaders_ecs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.cpp
src/core/: point.hpp
src/framework/: CMakeLists.txt  asset_loader.hpp  audio_player.hpp  constants.hpp  event_broker.hpp  event_broker.tpp  game.cpp  game.hpp  player_input.hpp  player_input_manager.cpp  player_input_manager.hpp  renderer.hpp  scene.hpp  scene_initialization_context.hpp  scene_setter.hpp  sdl_asset_manager.cpp  sdl_asset_manager.hpp  sdl_renderer.cpp  sdl_renderer.hpp  system.hpp  system_adder.hpp  system_registry.hpp
src/framework/components/: position.hpp  sprite_static.hpp
src/framework/ecs/: CMakeLists.txt  component_manager.hpp  component_manager.tpp  default_ecs.cpp  default_ecs.hpp  ecs.hpp  entity.hpp  entity_manager.hpp  event_broker.hpp  event_broker.tpp  mertens_ecs.hpp  message_board.hpp  message_board.tpp  system.hpp
src/framework/game/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  constants.hpp  game.cpp  game.hpp  player_input_manager.cpp  player_input_manager.hpp  renderer.hpp  scene.hpp  scene_initialization_context.hpp  sdl_asset_manager.cpp  sdl_asset_manager.hpp  sdl_renderer.cpp  sdl_renderer.hpp
src/framework/systems/: CMakeLists.txt  rendering.cpp  rendering.hpp
src/gallia/: CMakeLists.txt  constants.hpp  hud.cpp  invaders.cpp  invaders.hpp  invasion_scene.cpp  invasion_scene.hpp  player.cpp  player.hpp  player_projectile.cpp  player_projectile.hpp  test_scene.cpp  test_scene.hpp
src/gallia/components/: animation.hpp  collision.hpp  damage_dealer.hpp  damage_type_enum.hpp  hitpoints.hpp  lifetime.hpp  player_movement.hpp  player_shooting.hpp  velocity.hpp
src/gallia/messages/: collision_occurred.hpp
src/gallia/systems/: CMakeLists.txt  animation.cpp  animation.hpp  collision_detection.cpp  collision_detection.hpp  damage.cpp  deletion.cpp  explode_on_defeat.cpp  hud_rendering.cpp  hud_rendering.hpp  lifetime.cpp  lifetime.hpp  player_movement.cpp  player_movement.hpp  player_shooting.cpp  player_shooting.hpp  position_following.cpp  position_following.hpp  rendering.cpp  rendering.hpp  score.cpp  score.hpp  velocity.cpp
src/gallia/util/: text_renderer.cpp  text_renderer.hpp
src/game/: CMakeLists.txt  constants.hpp  fortress.cpp  fortress.hpp  hud.cpp  hud.hpp  invaders.cpp  invaders.hpp  invasion_scene.cpp  invasion_scene.hpp  player.cpp  player.hpp
src/game/assets/: asset_enums.hpp
src/game/components/: animation.hpp  collided_with.hpp  collision.hpp  damage_dealer.hpp  deletable.hpp  explode_on_defeat.hpp  hitpoints.hpp  interacts_on_collide.hpp  invader.hpp  player_movement.hpp  position.hpp  position_following.hpp  sound_on_defeat.hpp  sprite.hpp  sprite_offset_on_damage.hpp  starting_position.hpp
src/game/events/: aliens_landed.hpp  collision_occurred.hpp  defeated.hpp  pause.hpp  play_audio.hpp  stop_audio.hpp  took_damage.hpp
src/game/scenes/: CMakeLists.txt
src/game/systems/: CMakeLists.txt  animation.cpp  animation.hpp  audio.cpp  audio.hpp  collision_detection.cpp  collision_detection.hpp  damage.cpp  damage.hpp  deletion.cpp  deletion.hpp  explode_on_defeat.cpp  explode_on_defeat.hpp  hud_rendering.cpp  hud_rendering.hpp  lifetime.cpp  lifetime.hpp  position_following.cpp  rendering.cpp  rendering.hpp  score.cpp  score.hpp  sound_on_defeat.cpp  sprite_offset_on_damage.cpp  sprite_offset_on_damage.hpp  velocity.cpp  velocity.hpp
tests/: CMakeLists.txt
tests/framework/: CMakeLists.txt  event_broker_test.cpp
web-dist/: .gitignore  (+1 more)
(+133 files in other folders)
